@@ -5,6 +5,7 @@ Changelog for App-Magpie
  - old: storing "cpan -O" output
  - old: possibility to reuse previous "cpan -O" output
  - old: restoring parsing capabilities with new cpan precision output
+ - old: storing rejected lines from "cpan -O" output
  - recent: using MetaCPAN::Client (::API is deprecated, gh#2)
  - update: trying to run './refresh' if existing & no new version
  - update: trying to install buildrequires (unless MAGPIE_NO_URPMI_BUILDREQUIRES)
